--- a/Source/RedSheeps.Wpf/Sample/MainWindow.xaml
+++ b/Source/RedSheeps.Wpf/Sample/MainWindow.xaml
@@ -46,5 +46,12 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </Button>
+        <Button Content="Close Window" Margin="5">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="Click">
+                    <interactivity:CloseWindowAction/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </Button>
     </StackPanel>
 </Window>
