Add DefaultResult and Options to ShowMessageAction.

--- a/Sample/Sample/MainWindow.xaml
+++ b/Sample/Sample/MainWindow.xaml
@@ -69,7 +69,9 @@
                     <interactivity:ShowMessageAction Message="Hello, World!"
                                                      Caption="Caption"
                                                      MessageBoxButton="OKCancel"
-                                                     MessageBoxImage="Question"/>
+                                                     MessageBoxImage="Question"
+                                                     DefaultResult="OK"
+                                                     Options="None"/>
                 </interactivity:NotificationTrigger>
             </i:Interaction.Triggers>
         </Button>
