--- a/Sample/Sample/MainWindow.xaml
+++ b/Sample/Sample/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
         xmlns:interactivity="clr-namespace:RedSheeps.Wpf.Interactivity;assembly=RedSheeps.Wpf"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         interactivity:FrameworkElements.Loaded="{Binding InitializeCommand}"
         interactivity:Windows.Closing="{Binding WindowClosingCommand}">
     <i:Interaction.Triggers>
